# embeddenator-agent-mcp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ECOSYSTEM_CONTEXT.md
src/: error.rs  lib.rs  main.rs  orchestrator.rs  protocol.rs  router.rs  server.rs  tools.rs  workflow.rs
